# UnrealMergeBinairies

./: .gitignore  Readme.md
Examples/: v1.expected.json  v2.expected.json
app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/src/: App.tsx  graphDiff.ts  ipc.ts  main.tsx  mergeGraphs.ts  nodeLabel.ts  styles.css  types.ts  ueblueprint.d.ts
app/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
app/src-tauri/src/: app_mode.rs  cli.rs  diff.rs  git.rs  graph_diff.rs  installer.rs  ipc.rs  lib.rs  main.rs  merge.rs  schema.rs  sidecar.rs
app/src-tauri/tests/: app_mode_test.rs  cli_test.rs  diff_test.rs  git_driver_e2e_test.rs  git_test.rs  installer_test.rs  ipc_test.rs  merge_driver_test.rs  merge_test.rs  mock_sidecar_test.rs  real_ue_smoke.rs  schema_test.rs  sidecar_test.rs  three_way_merge_e2e_test.rs
app/src/views/: BlueprintTest.tsx  ConflictList.module.css  ConflictList.tsx  Diff.module.css  Diff.tsx  GraphPane.module.css  GraphPane.tsx  GraphView.module.css  GraphView.tsx  PropertiesDiff.module.css  PropertiesDiff.tsx  Resolve.module.css  Resolve.tsx  ResultPanel.module.css  ResultPanel.tsx
docs/superpowers/plans/: 2026-05-22-plan-1-ue-plugin-properties-commandlet.md  (+4 more)
src/: readme.md  script_output.json  test.py  test2.py  test3.py  test4.py
tools/: audit-stdout.ps1  error-cases.ps1  golden-test.ps1  run-commandlet.ps1
ue-host/: HostProject.uproject
ue-host/Config/: DefaultEngine.ini
ue-host/Content/: BP_Base.uasset
ue-plugin/MergeBinariesExport/: MergeBinariesExport.uplugin
(+21 files in other folders)
