[package]
name = "unreal-merge"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
publish = false
default-run = "unreal-merge"

[lib]
name = "unreal_merge"
path = "src/lib.rs"

[[bin]]
name = "unreal-merge"
path = "src/main.rs"

[[bin]]
name = "mock_ue_sidecar"
path = "src/bin/mock_ue_sidecar.rs"
required-features = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
tempfile = "3.10"
walkdir = "2.5"
tauri = { version = "2", features = [] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"
tempfile = "3.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
debug = 1
incremental = true

[profile.release]
lto = "thin"
codegen-units = 1
